fix: Gradle plugin metamodel wiring for every source set and the javadoc preview flag (#449)